--- a/css/styles.css
+++ b/css/styles.css
@@ -251,10 +251,11 @@ label {
   font-weight: bold;
   font-size: 16px;
 }
-.myForm{
+.form-format{
   background-image: url("../images/background3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  padding: 20px 300px 40px 300px;
 
 }
 
