--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ html{
   scroll-behavior: smooth;
 }
 .landing{
-  background-image: url('../images/background1.jpg');
+  background-image: url('../images/backgrounds/h_img.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -63,7 +63,7 @@ html{
 }
 .services{
   text-align: center;
-  background-image: url("../images/background2.jpg");
+  background-image: url("../images/backgrounds/s_image.jpg");
   color: white;
   background-position: center;
   font-family: sans-serif;
@@ -106,14 +106,7 @@ html{
   padding-top:40px;
   font-family: 'Gabriela', serif;
 }
-.contact{
-  background-image: url('../images/background2.jpg');
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: white;
-  
-}
+
 .hd-one{
   padding: 4px;
 }
@@ -121,7 +114,7 @@ html{
 footer{
   text-align: center;
   padding-top: 30px;
-  font-family: 'Delius Swash Caps', cursive;
+  font-family: Arial, Helvetica, sans-serif;
 }
 footer p{
   margin-top: 10px;
@@ -252,7 +245,7 @@ label {
   font-size: 16px;
 }
 .form-format{
-  background-image: url("../images/background3.jpg");
+  background-image: url("../images/backgrounds/s_image.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   padding: 20px 300px 40px 300px;
