--- a/css/styles.css
+++ b/css/styles.css
@@ -127,31 +127,9 @@ footer p{
 #product .title, #development .title, #design .title{
   font-size: 20px;
   font-weight: 600;
-}
-#overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
-  display: none;
-  color: black;
-  width: 100%;
-  height: 100%;
-  background-color:rgba(255, 255, 255, 0.456);
-  position:absolute;
-  top: 20px;
-  left: 35px;
-  font-weight: bold;
-  text-align: center;
-  font-size: 30px;
-  padding-top: 50%;
-  font-family: sans-serif;
-}
-@media only screen and (max-width: 755px){
-  #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
-    width: 100%;
-    height: 100%;
-    top: 20px;
-    left: 16px;
-    padding-top: 20%;
-    
-  }
+};
+
+
   .col-md-3 img{
     width:100%px;
     margin: 20px;
@@ -168,16 +146,8 @@ footer p{
 
     
   }
-}
-@media only screen and (max-width: 425px){
-  #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
-    width: 100%;
-    height: 100%;
-    top: 20px;
-    left: 16px;
-    padding-top: 20%;
-    font-size: 20px;
-  }
+
+
   .col-md-3 img{
     width:100%px;
     margin: 20px;
@@ -204,15 +174,8 @@ footer p{
     margin-left: 4%;
     width: 84%;
   }
-}
-@media only screen and (min-width: 825px){
-  #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
-    width: 100%;
-    height: 100%;
-    top: 20px;
-    left: 20px;
-    padding-top:30%; 
-  }
+
+
   .col-md-3 img{
     width: 400px;
     margin: 20px;
@@ -221,16 +184,8 @@ footer p{
     margin-left:10%;
     margin-right: 10%; 
   }
-}
-@media only screen and (min-width: 625px){
-  #overlay,#overlay2,#overlay3,#overlay4,#overlay5,#overlay6,#overlay7,#overlay8{
-    width: 100%;
-    height: 100%;
-    top: 20px;
-    left: 20px;
-    padding-top:20%; 
-    font-size: 26px;
-  }
+
+
   .col-md-3 img{
     width: 400px;
     margin: 20px;
@@ -239,7 +194,7 @@ footer p{
     margin-left:6%;
     margin-right: 10%; 
   }
-}
+
 label {
   font-weight: bold;
   font-size: 16px;
@@ -261,16 +216,16 @@ label {
 }
 
 input{
-  background-color: #8b8888;
-  color: #2F4F4F;
+  background-color: rgb(255, 255, 255);
+  color: black;
   width: 250px;
   margin-bottom: 10px;
-  box-shadow: 5px 5px 2px 2px #bebcbc;
+  
 }
 textarea {
-  background-color: #D3D3D3;
-  color: #2F4F4F;
+  background-color: rgb(255, 255, 255);
+  color: black;
   width: 500px;
   margin-bottom: 10px;
-  box-shadow: 5px 5px 2px 2px #696969;
+  
 }
